Fix the relation charts being cut off

--- a/static/style/main.css
+++ b/static/style/main.css
@@ -190,7 +190,7 @@ padding: 5px;
 }
 
 .rel_chart_right {
-width: 295px;
+width: 300px;
 }
 
 #corpus-lvl-title {
